--- a/service-a/src/main/resources/bootstrap.yml
+++ b/service-a/src/main/resources/bootstrap.yml
@@ -1,12 +1,25 @@
 server:
   port: 1891
-spring:
-  application:
-    name: service-a
 eureka:
   client:
     enabled: true
     service-url:
       defaultZone: http://eureka-server:1881/eureka/
+spring:
+  application:
+    name: service-a
+  profiles:
+    active: dev
+  cloud:
+    config:
+      label: master
+      discovery:
+        enabled: true
+        service-id: config-server
 logging:
   config: classpath:spring/logback.xml
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
