--- a/eureka-server/src/main/resources/bootstrap.yml
+++ b/eureka-server/src/main/resources/bootstrap.yml
@@ -9,5 +9,8 @@ eureka:
       defaultZone: http://${spring.application.name}:${server.port}/eureka/
     fetch-registry: false
     register-with-eureka: false
+  server:
+    enable-self-preservation: false
+
 logging:
   config: classpath:spring/logback.xml
