--- a/service-a/src/main/resources/bootstrap.yml
+++ b/service-a/src/main/resources/bootstrap.yml
@@ -12,6 +12,9 @@ spring:
     active: dev
   zipkin:
     base-url: http://zipkin-server:9411
+  sleuth:
+    sampler:
+      percentage: 1.0
   cloud:
     config:
       label: master
@@ -21,6 +24,9 @@ spring:
 logging:
   config: classpath:spring/logback.xml
 
+feign:
+  hystrix:
+    enabled: true
 management:
   endpoints:
     web:
