--- a/service-b/src/main/resources/bootstrap.yml
+++ b/service-b/src/main/resources/bootstrap.yml
@@ -12,6 +12,9 @@ spring:
     active: dev
   zipkin:
     base-url: http://zipkin-server:9411
+  sleuth:
+    sampler:
+      percentage: 1.0
   cloud:
     config:
       label: master
@@ -20,7 +23,9 @@ spring:
         service-id: config-server
 logging:
   config: classpath:spring/logback.xml
-
+feign:
+  hystrix:
+    enabled: true
 management:
   endpoints:
     web:
