--- a/gateway/src/main/resources/bootstrap.yml
+++ b/gateway/src/main/resources/bootstrap.yml
@@ -23,3 +23,5 @@ spring:
         service-id: config-server
 logging:
   config: classpath:spring/logback.xml
+  level:
+    org.springframework.cloud.gateway: debug
