--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -8,3 +8,9 @@ spring:
            - Path=/a/**
           filters:
           - StripPrefix=1
+        - id: service-b
+          uri: lb://service-b
+          predicates:
+           - Path=/b/**
+          filters:
+          - StripPrefix=1
