--- a/service-b/src/main/resources/bootstrap.yml
+++ b/service-b/src/main/resources/bootstrap.yml
@@ -5,6 +5,10 @@ eureka:
     enabled: true
     service-url:
       defaultZone: http://eureka-server:1881/eureka/
+  instance:
+    prefer-ip-address: true
+    ip-address: 134.175.38.40 #為了兩台云服務器能通訊，線上別這麼用
+    instance-id: ${eureka.instance.ip-address}:${spring.application.name}:${server.port}
 spring:
   application:
     name: service-b
